# DAT290-template

./: README.md  justfile  link.x  startup.s
lib/inc/: debug.h
lib/src/: debug.c  startup.c
projects/: projects.cmake
projects/template/: CMakeLists.txt  README.md
projects/template/src/: main.c
